Entities, basic structure for controller and services, and successful connection to db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.uri=mongodb+srv://me:weak@cluster0.jmdl2.mongodb.net/test
