--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.data.mongodb.port=27017
+server.port=8080
+
 spring.data.mongodb.host=localhost
-spring.data.uri=mongodb+srv://me:weak@cluster0.jmdl2.mongodb.net/test
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=database
