changes on build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,14 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+apply plugin: 'java'
+apply plugin: 'maven'
+
+group = 'com.bazlur.app'
+// artifactId is taken by default, from folder name
+version = '0.1-SNAPSHOT'
+
+dependencies {
+	compile 'commons-lang:commons-lang:2.3'
+}
